--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
 	font-family: helvetica, sans-serif;
     background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), 
-    url(images/backdrop.jpg);
+    url(/images/backdrop.jpg);
     background-size: cover;
 }
 
